nginx-redirect/nginx_deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/conf.d # mount nginx-conf volumn to /etc/nginx
              readOnly: true
              name: default-conf
            - mountPath: /var/log/nginx
              name: log
      volumes:
        - name: default-conf
          configMap:
            name: default-conf # place ConfigMap `nginx-conf` on /etc/nginx
            items:
              - key: default.conf
                path: default.conf
        - name: log
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx
